--- a/lib/main.ipynb
+++ b/lib/main.ipynb
@@ -1148,64 +1148,486 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 213,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n = len(y_pred)\n",
+    "prediction_result = pd.DataFrame([])\n",
+    "prediction_result['Date'] = df['Date'].iloc[-n:]\n",
+    "prediction_result['ture'] = df['Label.x'].iloc[-n:]\n",
+    "prediction_result['prediction'] = y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>ture</th>\n",
+       "      <th>prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1492</th>\n",
+       "      <td>7/14/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1493</th>\n",
+       "      <td>7/15/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1494</th>\n",
+       "      <td>7/16/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>7/17/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>7/18/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1497</th>\n",
+       "      <td>7/21/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1498</th>\n",
+       "      <td>7/22/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>7/23/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1500</th>\n",
+       "      <td>7/24/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1501</th>\n",
+       "      <td>7/25/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1502</th>\n",
+       "      <td>7/28/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1503</th>\n",
+       "      <td>7/29/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1504</th>\n",
+       "      <td>7/30/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1505</th>\n",
+       "      <td>7/31/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1506</th>\n",
+       "      <td>8/1/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1507</th>\n",
+       "      <td>8/4/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1508</th>\n",
+       "      <td>8/5/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1509</th>\n",
+       "      <td>8/6/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1510</th>\n",
+       "      <td>8/7/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1511</th>\n",
+       "      <td>8/8/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512</th>\n",
+       "      <td>8/11/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1513</th>\n",
+       "      <td>8/12/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1514</th>\n",
+       "      <td>8/13/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1515</th>\n",
+       "      <td>8/14/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1516</th>\n",
+       "      <td>8/15/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1517</th>\n",
+       "      <td>8/18/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1518</th>\n",
+       "      <td>8/19/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1519</th>\n",
+       "      <td>8/20/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1520</th>\n",
+       "      <td>8/21/2014</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1521</th>\n",
+       "      <td>8/22/2014</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1959</th>\n",
+       "      <td>5/19/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1960</th>\n",
+       "      <td>5/20/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961</th>\n",
+       "      <td>5/23/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1962</th>\n",
+       "      <td>5/24/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1963</th>\n",
+       "      <td>5/25/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1964</th>\n",
+       "      <td>5/26/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1965</th>\n",
+       "      <td>5/27/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1966</th>\n",
+       "      <td>5/31/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1967</th>\n",
+       "      <td>6/1/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1968</th>\n",
+       "      <td>6/2/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1969</th>\n",
+       "      <td>6/3/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1970</th>\n",
+       "      <td>6/6/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1971</th>\n",
+       "      <td>6/7/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1972</th>\n",
+       "      <td>6/8/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1973</th>\n",
+       "      <td>6/9/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1974</th>\n",
+       "      <td>6/10/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1975</th>\n",
+       "      <td>6/13/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1976</th>\n",
+       "      <td>6/14/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1977</th>\n",
+       "      <td>6/15/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1978</th>\n",
+       "      <td>6/16/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979</th>\n",
+       "      <td>6/17/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980</th>\n",
+       "      <td>6/20/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1981</th>\n",
+       "      <td>6/21/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982</th>\n",
+       "      <td>6/22/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983</th>\n",
+       "      <td>6/23/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984</th>\n",
+       "      <td>6/24/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1985</th>\n",
+       "      <td>6/27/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1986</th>\n",
+       "      <td>6/28/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1987</th>\n",
+       "      <td>6/29/2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1988</th>\n",
+       "      <td>6/30/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>497 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([ 0.,  1.,  1.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  1.,\n",
-       "        1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,\n",
-       "        0.,  1.,  1.,  1.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,\n",
-       "        1.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  1.,\n",
-       "        0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  1.,  0.,  1.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  1.,  1.,\n",
-       "        0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  1.,  1.,  1.,  0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,\n",
-       "        1.,  1.,  0.,  0.,  1.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  1.,\n",
-       "        0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        0.,  0.,  0.,  1.,  0.,  1.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  1.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        1.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
-       "        0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,\n",
-       "        1.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
-       "        1.,  0.,  0.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  1.,  1.,\n",
-       "        1.,  1.,  0.,  0.,  1.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  0.,\n",
-       "        1.,  0.,  0.,  0.,  1.,  0.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,\n",
-       "        1.,  1.,  1.])"
+       "           Date  ture  prediction\n",
+       "1492  7/14/2014     0         0.0\n",
+       "1493  7/15/2014     1         1.0\n",
+       "1494  7/16/2014     0         1.0\n",
+       "1495  7/17/2014     1         0.0\n",
+       "1496  7/18/2014     0         0.0\n",
+       "1497  7/21/2014     1         1.0\n",
+       "1498  7/22/2014     1         1.0\n",
+       "1499  7/23/2014     1         0.0\n",
+       "1500  7/24/2014     0         0.0\n",
+       "1501  7/25/2014     0         0.0\n",
+       "1502  7/28/2014     1         0.0\n",
+       "1503  7/29/2014     1         1.0\n",
+       "1504  7/30/2014     0         0.0\n",
+       "1505  7/31/2014     0         0.0\n",
+       "1506   8/1/2014     1         0.0\n",
+       "1507   8/4/2014     0         1.0\n",
+       "1508   8/5/2014     0         0.0\n",
+       "1509   8/6/2014     1         0.0\n",
+       "1510   8/7/2014     1         0.0\n",
+       "1511   8/8/2014     1         0.0\n",
+       "1512  8/11/2014     0         0.0\n",
+       "1513  8/12/2014     1         1.0\n",
+       "1514  8/13/2014     1         0.0\n",
+       "1515  8/14/2014     1         0.0\n",
+       "1516  8/15/2014     1         1.0\n",
+       "1517  8/18/2014     1         1.0\n",
+       "1518  8/19/2014     0         1.0\n",
+       "1519  8/20/2014     1         0.0\n",
+       "1520  8/21/2014     0         0.0\n",
+       "1521  8/22/2014     1         0.0\n",
+       "...         ...   ...         ...\n",
+       "1959  5/19/2016     1         1.0\n",
+       "1960  5/20/2016     1         1.0\n",
+       "1961  5/23/2016     1         1.0\n",
+       "1962  5/24/2016     1         0.0\n",
+       "1963  5/25/2016     1         0.0\n",
+       "1964  5/26/2016     0         1.0\n",
+       "1965  5/27/2016     1         0.0\n",
+       "1966  5/31/2016     0         1.0\n",
+       "1967   6/1/2016     0         0.0\n",
+       "1968   6/2/2016     0         1.0\n",
+       "1969   6/3/2016     1         0.0\n",
+       "1970   6/6/2016     1         0.0\n",
+       "1971   6/7/2016     0         0.0\n",
+       "1972   6/8/2016     0         0.0\n",
+       "1973   6/9/2016     0         1.0\n",
+       "1974  6/10/2016     0         0.0\n",
+       "1975  6/13/2016     0         0.0\n",
+       "1976  6/14/2016     1         0.0\n",
+       "1977  6/15/2016     0         1.0\n",
+       "1978  6/16/2016     1         0.0\n",
+       "1979  6/17/2016     1         1.0\n",
+       "1980  6/20/2016     1         0.0\n",
+       "1981  6/21/2016     1         0.0\n",
+       "1982  6/22/2016     1         0.0\n",
+       "1983  6/23/2016     0         1.0\n",
+       "1984  6/24/2016     0         1.0\n",
+       "1985  6/27/2016     1         0.0\n",
+       "1986  6/28/2016     1         1.0\n",
+       "1987  6/29/2016     1         1.0\n",
+       "1988  6/30/2016     0         1.0\n",
+       "\n",
+       "[497 rows x 3 columns]"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n = len(y_pred)\n",
-    "prediction_result = pd.DataFrame([])\n",
-    "prediction_result['Date'] = df"
+    "prediction_result.to_csv('../output/prediction_result.csv')\n",
+    "prediction_result"
    ]
   },
   {
