--- a/lib/main.ipynb
+++ b/lib/main.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +353,7 @@
     "    print '======================================'\n",
     "    print 'adaboost'\n",
     "    #classificationevaluation(Y_test, clfboost.predict(X_test))\n",
-    "    return y_pred"
+    "    return y_pred, clf.predict_proba(X_test)"
    ]
   },
   {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 230,
    "metadata": {
     "collapsed": false
    },
@@ -1143,12 +1143,13 @@
     "features_list = ['Date','Label.x']\n",
     "features_list.extend(chosed_features)\n",
     "X_train, Y_train, X_test, Y_test, X, Y = dataselection(df[features_list], m=4)\n",
-    "y_pred = KNN()"
+    "y_pred, y_prob = KNN()\n",
+    "y_prob = [item[0] for item in y_prob]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 220,
    "metadata": {
     "collapsed": false
    },
@@ -1163,9 +1164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 221,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1620,7 +1622,7 @@
        "[497 rows x 3 columns]"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1628,6 +1630,170 @@
    "source": [
     "prediction_result.to_csv('../output/prediction_result.csv')\n",
     "prediction_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************\n",
+      "0.5\n",
+      "======================================\n",
+      "ar is:  0.585513078471\n",
+      "er is:  0.414486921529\n",
+      "Type I error rate:  0.263581488934\n",
+      "Type II error rate:  0.150905432596\n",
+      "**************************************\n",
+      "0.55\n",
+      "======================================\n",
+      "ar is:  0.53722334004\n",
+      "er is:  0.46277665996\n",
+      "Type I error rate:  0.197183098592\n",
+      "Type II error rate:  0.265593561368\n",
+      "**************************************\n",
+      "0.6\n",
+      "======================================\n",
+      "ar is:  0.53722334004\n",
+      "er is:  0.46277665996\n",
+      "Type I error rate:  0.197183098592\n",
+      "Type II error rate:  0.265593561368\n",
+      "**************************************\n",
+      "0.65\n",
+      "======================================\n",
+      "ar is:  0.492957746479\n",
+      "er is:  0.507042253521\n",
+      "Type I error rate:  0.12676056338\n",
+      "Type II error rate:  0.380281690141\n",
+      "**************************************\n",
+      "0.7\n",
+      "======================================\n",
+      "ar is:  0.492957746479\n",
+      "er is:  0.507042253521\n",
+      "Type I error rate:  0.12676056338\n",
+      "Type II error rate:  0.380281690141\n",
+      "**************************************\n",
+      "0.75\n",
+      "======================================\n",
+      "ar is:  0.442655935614\n",
+      "er is:  0.557344064386\n",
+      "Type I error rate:  0.0643863179074\n",
+      "Type II error rate:  0.492957746479\n",
+      "**************************************\n",
+      "0.8\n",
+      "======================================\n",
+      "ar is:  0.442655935614\n",
+      "er is:  0.557344064386\n",
+      "Type I error rate:  0.0643863179074\n",
+      "Type II error rate:  0.492957746479\n",
+      "**************************************\n",
+      "0.85\n",
+      "======================================\n",
+      "ar is:  0.412474849095\n",
+      "er is:  0.587525150905\n",
+      "Type I error rate:  0.0261569416499\n",
+      "Type II error rate:  0.561368209256\n"
+     ]
+    }
+   ],
+   "source": [
+    "#risk management: change the threshold\n",
+    "for i in range(50,90,5):\n",
+    "    print '**************************************'\n",
+    "    print i/100.0\n",
+    "    classificationevaluation(Y_test, [int(item<(i/100.0)) for item in y_prob])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************\n",
+      "0.05\n",
+      "======================================\n",
+      "ar is:  0.623742454728\n",
+      "er is:  0.376257545272\n",
+      "Type I error rate:  0.376257545272\n",
+      "Type II error rate:  0.0\n",
+      "**************************************\n",
+      "0.1\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.374245472837\n",
+      "Type II error rate:  0.0\n",
+      "**************************************\n",
+      "0.15\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.374245472837\n",
+      "Type II error rate:  0.0\n",
+      "**************************************\n",
+      "0.2\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.366197183099\n",
+      "Type II error rate:  0.00804828973843\n",
+      "**************************************\n",
+      "0.25\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.366197183099\n",
+      "Type II error rate:  0.00804828973843\n",
+      "**************************************\n",
+      "0.3\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.348088531187\n",
+      "Type II error rate:  0.0261569416499\n",
+      "**************************************\n",
+      "0.35\n",
+      "======================================\n",
+      "ar is:  0.625754527163\n",
+      "er is:  0.374245472837\n",
+      "Type I error rate:  0.348088531187\n",
+      "Type II error rate:  0.0261569416499\n",
+      "**************************************\n",
+      "0.4\n",
+      "======================================\n",
+      "ar is:  0.609657947686\n",
+      "er is:  0.390342052314\n",
+      "Type I error rate:  0.321931589537\n",
+      "Type II error rate:  0.0684104627767\n",
+      "**************************************\n",
+      "0.45\n",
+      "======================================\n",
+      "ar is:  0.609657947686\n",
+      "er is:  0.390342052314\n",
+      "Type I error rate:  0.321931589537\n",
+      "Type II error rate:  0.0684104627767\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5,50,5):\n",
+    "    print '**************************************'\n",
+    "    print i/100.0\n",
+    "    classificationevaluation(Y_test, [int(item<(i/100.0)) for item in y_prob])"
    ]
   },
   {
